--- a/hammers/emacs/completion.org
+++ b/hammers/emacs/completion.org
@@ -38,6 +38,13 @@
     :requires company
     :config
     (company-flx-mode +1))
+  (use-package company-box
+    :diminish
+    :hook (company-mode . company-box-mode)
+    :config
+    (setq company-box-backends-colors nil)
+    (setq company-box-show-single-candidate nil)
+    (setq company-box-max-candidates 50))
   (use-package company-quickhelp
     :defines company-quickhelp-delay
     :bind
