--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -54,18 +54,18 @@
                          user-emacs-directory)))
   (setq package-user-dir versioned-package-dir))
 
-;;; Standard package repositories
-(let* ((no-ssl (and (memq system-type '(windows-nt ms-dos))
-                    (not (gnutls-available-p))))
-       (proto (if no-ssl "http" "https")))
-  (if no-ssl
-    (setq package-archives '(("gnu"   . "http://elpa.emacs-china.org/gnu/")
-                         ("melpa" . "http://elpa.emacs-china.org/melpa/")))
-    (unless no-ssl
+(if (file-directory-p (expand-file-name "offline" user-emacs-directory))
+    (setq package-archives `(("gnu" . ,(expand-file-name "offline/gnu" user-emacs-directory))
+			     ("melpa" . ,(expand-file-name "offline/melpa" user-emacs-directory))))
+  (let* ((no-ssl (and (memq system-type '(windows-nt ms-dos))
+		      (not (gnutls-available-p))))
+	 (proto (if no-ssl "http" "https")))
+    (if no-ssl
+	(setq package-archives '(("gnu"   . "http://elpa.emacs-china.org/gnu/")
+				 ("melpa" . "http://elpa.emacs-china.org/melpa/")))
+      (unless no-ssl
     	(setq package-archives '(("gnu"   . "https://elpa.emacs-china.org/gnu/")
-                         ("melpa" . "https://elpa.emacs-china.org/melpa/")))))
-  )
-
+				 ("melpa" . "https://elpa.emacs-china.org/melpa/")))))))
 
 ;; Work-around for https://debbugs.gnu.org/cgi/bugreport.cgi?bug=34341
 (when (version= "26.2" emacs-version)
