feat: add the forward symbol and backward symbol

--- a/hammers/emacs/editing.org
+++ b/hammers/emacs/editing.org
@@ -181,10 +181,10 @@
    ("C-M-b" . sp-backward-sexp)
    ("C-M-n" . sp-next-sexp)
    ("C-M-p" . sp-previous-sexp)
-   ("C-S-f" . sp-forward-symbol)
-   ("C-S-b" . sp-backward-symbol)
+   ("M-F" . sp-forward-symbol)
+   ("M-B" . sp-backward-symbol)
    ("C-M-w" . sp-copy-sexp)
-   ("C-M-d" . delete-sexp)
+   ("C-M-d" . sp-kill-sexp)
    ("M-<backspace>" . backward-kill-word)
    ("C-<backspace>" . sp-backward-kill-word)
    ([remap sp-backward-kill-word] . backward-kill-word)
