--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -94,7 +94,7 @@
     )))													   
 #+END_SRC
 
-#+BEGIN_SRC yaml tangle "~/.emacs.d/rime/default.custom.yaml" :noweb yes
+#+BEGIN_SRC yaml :tangle "~/.emacs.d/rime/default.custom.yaml" :noweb yes
 patch:
   "menu/page_size": 100
   "speller/auto_select": false
