--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -32,13 +32,14 @@
 
 ** 系统配置
 
-  #+BEGIN_SRC elisp
-  (defconst m/os
-    (let ((os (symbol-name system-type)))
-      (cond ((string= os "darwin") 'macos)
-            ((string-prefix-p "gnu" os) 'linux)
-            ((or (string-prefix-p "ms" os) (string-prefix-p "windows" os)) 'windows))))
-  #+END_SRC
+#+BEGIN_SRC elisp
+(defconst m/os
+  (let ((os (symbol-name system-type)))
+    (cond ((string= os "darwin") 'macos)
+          ((string-prefix-p "gnu" os) 'linux)
+          ((or (string-prefix-p "ms" os) (string-prefix-p "windows" os)) 'windows))))
+(setq gc-cons-threshold 100000000)
+#+END_SRC
 
 ** 包管理配置
    Emacs 通过插件机制来提高可扩展性，我们可以通过安装插件来灵活的扩展 Emacs 的功能。 插件被封装成适用于 Emacs 的安装包，被存放在插件仓库（软件包仓库）中，以便与用户下载安装。
@@ -46,7 +47,7 @@
 *** 包管理器配置
     Emacs 的包管理器名为：[[http://tromey.com/elpa/][package]]. 但是 package 默认配置插件仓库包含的插件相对较少，我们需要添加一些常用的第三方插件仓库，以便与搜索与安装插件。
 
-    #+BEGIN_SRC elisp
+#+BEGIN_SRC elisp
 (require 'package)
 ;;; Install into separate package dirs for each Emacs version, to prevent bytecode incompatibility
 (let ((versioned-package-dir
@@ -73,7 +74,7 @@
 
 (package-initialize)
 (package-refresh-contents)
-    #+END_SRC
+#+END_SRC
 *** use package
     Emacs 常见的配置管理都是先使用包管理器安装对应的包，然后再进行配置。安装包和配置是割裂开的。对于使用多个包的情况，安装包配置会分散到各个地方，安装包相关的配置会变得难以维护。
     [[https://github.com/jwiegley/use-package][use-package]] 提供了一个非常干净简洁的安装包配置的方式。use-package 可以将安装包的配置隔离开，使得 Emacs 配置文件干净简洁。
