feat: diminsh with use-package

--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -31,8 +31,7 @@
 (use-package posframe)
 
 (use-package pyim
-  :diminish
-  :demand t
+  :diminish pyim-isearch-mode
   :requires posframe
   :config
   ;; 激活 basedict 拼音词库，五笔用户请继续阅读 README
