--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -38,13 +38,17 @@
     (cond ((string= os "darwin") 'macos)
           ((string-prefix-p "gnu" os) 'linux)
           ((or (string-prefix-p "ms" os) (string-prefix-p "windows" os)) 'windows))))
-(setq gc-cons-threshold 100000000)
 #+END_SRC
 
 ** 是否开启离线模式
 #+BEGIN_SRC elisp
 (defconst m/offline 
   (file-directory-p (expand-file-name "offline" user-emacs-directory)))
+#+END_SRC
+
+** 垃圾回收设置
+#+BEGIN_SRC elisp
+(setq gc-cons-threshold 100000000)
 #+END_SRC
 ** 包管理配置
    Emacs 通过插件机制来提高可扩展性，我们可以通过安装插件来灵活的扩展 Emacs 的功能。 插件被封装成适用于 Emacs 的安装包，被存放在插件仓库（软件包仓库）中，以便与用户下载安装。
@@ -114,30 +118,31 @@
 ** 自定义配置聚合
 
    #+BEGIN_SRC elisp
+   (defconst m/load-path (expand-file-name "lisp" user-emacs-directory))
    (use-package init-os
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-ui
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-completion
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-correction
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-project
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-literate
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-vcs
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-lsp
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-editing
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-chinese
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-languages
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    (use-package init-terminal
-    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+    :load-path m/load-path)
    #+END_SRC
 
 
