feat: use c-n/p nav page select

--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -72,7 +72,11 @@
 
   :bind
   (("M-j" . pyim-convert-string-at-point) ;与 pyim-probe-dynamic-english 配合
-   ("C-;" . pyim-delete-word-from-personal-buffer))
+   ("C-;" . pyim-delete-word-from-personal-buffer)
+   :map pyim-mode-map
+   ("C-n" . pyim-page-next-page)
+   ("C-p" . pyim-page-previous-page)
+  )
   :hook 
   ((emacs-startup . pyim-restart)))
 #+END_SRC
