--- a/hammers/emacs/completion.org
+++ b/hammers/emacs/completion.org
@@ -15,8 +15,6 @@
 #+BEGIN_SRC elisp
 (use-package company
   :diminish company-mode
-  :defines
-  (company-dabbrev-ignore-case company-dabbrev-downcase)
   :bind
   (:map company-active-map
    ("C-n" . company-select-next)
@@ -28,6 +26,7 @@
   :custom
   (company-idle-delay 0)
   (company-echo-delay 0)
+  (company-dabbrev-downcase nil)
   (company-minimum-prefix-length 1)
   :config
   (global-company-mode)
